--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "joi": "^17.13.3",
+    "mongoose": "^8.8.1",
     "morgan": "1.10.0",
     "uuid": "^11.0.2"
   },
@@ -23,6 +25,6 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "^3.1.7"
   }
 }
